[package]
name = "ogcapi-poc"
version = "0.0.1"
license = "BSD-3-Clause"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.58"
aws-sdk-s3 = "0.14.0"
axum = "0.5.9"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
geojson = "0.23.0"
hyper = { version = "0.14.19", features = ["full"] }
once_cell = "1.12.0"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls", "hyper-rustls"] }
schemars = { version = "0.8.10" }
serde = "1.0.137"
serde_json = "1.0.81"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "json"] }
tokio = { version = "1.19.2", features = ["full"] }
tokio-cron-scheduler = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["auth"] }
tracing = "0.1.35"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4"] }

ogcapi-drivers = { git = "https://github.com/camptocamp/ogcapi", branch = "poc", features = ["postgres", "s3"] }
ogcapi-services = { git = "https://github.com/camptocamp/ogcapi", branch = "poc", features = ["features", "processes", "stac"] }
ogcapi-types = { git = "https://github.com/camptocamp/ogcapi", branch = "poc" }