[package]
name = "ogcapi-poc"
version = "0.0.1"
license = "BSD-3-Clause"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.58"
aws-sdk-s3 = "0.16.0"
aws-smithy-types-convert = { version = "0.46.0", features = ["convert-chrono"] }
axum = "0.5.13"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
dotenv = "0.15.0"
geo = { version = "0.22.1", features = ["use-proj"] }
geojson = { version = "0.23.0", features = ["geo-types"] }
hyper = { version = "0.14.20", features = ["full"] }
include_dir = { version = "0.7.2", features = ["glob"] }
once_cell = "1.13.0"
proj = { version = "0.27.0", features = ["bundled_proj"]}
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls", "hyper-rustls"] }
schemars = { version = "0.8.10" }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "json"] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-cron-scheduler = "0.7.6"
tokio-stream = "0.1.9"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["auth"] }
tracing = "0.1.35"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4"] }
wkb = "0.7.1"

ogcapi-drivers = { git = "https://github.com/camptocamp/ogcapi", branch = "poc", features = ["postgres", "s3"] }
ogcapi-services = { git = "https://github.com/camptocamp/ogcapi", branch = "poc", features = ["features", "processes", "stac"] }
ogcapi-types = { git = "https://github.com/camptocamp/ogcapi", branch = "poc" }

# ogcapi-drivers = { path = "../../ogcapi/ogcapi-drivers", features = ["postgres", "s3"] }
# ogcapi-services = { path = "../../ogcapi/ogcapi-services", features = ["features", "processes", "stac"] }
# ogcapi-types = { path = "../../ogcapi/ogcapi-types" }
